--- a/README
+++ b/README
@@ -1,31 +1,38 @@
-BreakDancer-1.0, released under GPLv3, is a Perl/Cpp package that provides genome-wide detection of structural variants from next generation paired-end sequencing reads. It includes two complementary programs. BreakDancerMax predicts five types of structural variants: insertions, deletions, inversions, inter- and intra-chromosomal translocations from next-generation short paired-end sequencing reads using read pairs that are mapped with unexpected separation distances or orientation.  BreakDancerMini focuses on detecting small indels (usually between 10bp and 100bp) using normally mapped read pairs.  Please read our paper for detailed algorithmic description. http://www.nature.com/nmeth/journal/v6/n9/abs/nmeth.1363.html
+BreakDancer-1.1, released under GPLv3, is a Cpp package that provides genome-wide detection of structural variants from next generation paired-end sequencing reads. It includes two complementary programs. BreakDancerMax predicts five types of structural variants: insertions, deletions, inversions, inter- and intra-chromosomal translocations from next-generation short paired-end sequencing reads using read pairs that are mapped with unexpected separation distances or orientation.  BreakDancerMini focuses on detecting small indels (usually between 10bp and 100bp) using normally mapped read pairs.  Please read our paper for detailed algorithmic description. http://www.nature.com/nmeth/journal/v6/n9/abs/nmeth.1363.html
 
-BreakDancerMax
+BreakDancerMax (Update from 1.0 to 1.1 version only applied to cpp now.)
 ----------------------
-Usage:   BreakDancerMax.pl <analysis_config_file>
+Usage:   breakdancer_max <analysis_config_file>
 Options:
-         -o STRING operate on a single chromosome [all chromosome]
-         -c INT    cutoff in unit of standard deviation [3]
-         -t        only detect transchromosomal rearrangement
-         -p FLOAT  prior probability of SV [0.001]
-         -e        learn parameters from data before applying to SV detection
-         -l        analyze Illumina long insert (mate-pair) library
-         -f        use Fisher's method to combine P values from multiple library
-         -d STRING prefix of fastq files that SV supporting reads will be saved by library
-         -g FILE   dump SVs and supporting reads in BED format for GBrowse
-         -m INT    maximum SV size [1000000]
-         -q INT    minimum alternative mapping quality [35]
-         -s INT    minimum length of a region [7]
-         -b INT    buffer size for building connection [100]
-         -r INT    minimum number of read pairs required to establish a connection
+       -o STRING       operate on a single chromosome [all chromosome]
+       -s INT          minimum length of a region [7]
+       -c INT          cutoff in unit of standard deviation [3]
+       -m INT          maximum SV size [1000000000]
+       -q INT          minimum alternative mapping quality [35]
+       -r INT          minimum number of read pairs required to establish a connection [2]
+       -x INT          maximum threshold of haploid sequence coverage for regions to be ignored [1000]
+       -b INT          buffer size for building connection [100]
+       -t              only detect transchromosomal rearrangement, by default off
+       -d STRING       prefix of fastq files that SV supporting reads will be saved by library
+       -g STRING       dump SVs and supporting reads in BED format for GBrowse
+       -l              analyze Illumina long insert (mate-pair) library
+       -a              print out copy number by bam file rather than library, by default on
+       -h              print out Allele Frequency column, by default off
+       -y INT          output score filter [40]
 
-Version: BreakDancerMax-1.0
+The followings are the new functions of version 1.1 from 1.0:
+
+1. It computes the copy number based on the normalization of the whole genome or whole chromosome along with the SV detection. By default the copy number is computed by bam file, but it can also compute per library with option "-a".
+2. The Allele Frequency column is more accurate for DEL type, with the help of the copy number computation. By default it is off. Include option "-h" if you want to look at the DEL type Allele Frequency.
+3. Since there are numerous false positive SV calls, the output has a cutoff of the PhredQ score, which by default is 40. Make sure to use option "-y yournumber" if you want to change the cutoff.
+
+The followings are those existing in version 1.0:
 
 Most of these options are self-explanatory.  It is convenient to use the -o option to parallelize SV detection for each chromosome.  When -o is used, the detection of inter-chromosomal translocation is disabled.  In that case, it may be convenient to use -t in a separate process to detect putative inter-chromosomal translocations without bothering to analyze read pairs that are mapped to the same chromosome. 
 
 The beta-test x86_64 Cpp version breakdancermax directly utilizes samtools C library. It is fully compatible with the perl version with identical usage and functions but is over 10 times faster. However, it only supports properly formated bam files and has only been tested using bam files produced by BWA. To obtain the correct result, it is important to have readgroup (@RG) tag in both the header and each alignment in the bam files. If you experience technical difficulty with the Cpp version, please email breakdancer-help@lists.sourceforge.net or consider using the perl version.
 
-The input to BreakDancerMax-1.0 is a set of map files produced by a front-end aligner such as MAQ, BWA, NovoAlign and Bfast, and a tab-delimited configuration file that specifies the locations of the map files, the detection parameters, and the sample information.
+The input to BreakDancerMax-1.1 is a set of map files produced by a front-end aligner such as MAQ, BWA, NovoAlign and Bfast, and a tab-delimited configuration file that specifies the locations of the map files, the detection parameters, and the sample information.
 
 If your map files are in the sam/bam format, you can use the bam2cfg.pl in the released package to automatic generate a configuration file (bam2cfg.pl also has dependence on AlnParser.pm in the release package). If you have a single bam file that contains multiple libraries, make sure that the readgroup and library information are properly encoded in the sam/bam header, and in each alignment record, otherwise bam2cfg.pl may fail to produce a correct configuration file.  Please follow instructions on http://samtools.sourceforge.net to properly format your bam files.
 
